chore: multiple alacritty instances
with this change every time i press shift+opt+enter a new instance of alacritty will open up

--- a/.skhdrc
+++ b/.skhdrc
@@ -72,7 +72,7 @@
 
 
 # open alacritty via shift + opt/alt + enter
-shift + alt - return : open -a Alacritty
+shift + alt - return : alacritty
 
 # ############################################################### #
 # THE FOLLOWING SECTION CONTAIN SIMPLE MAPPINGS DEMONSTRATING HOW #
