--- a/.skhdrc
+++ b/.skhdrc
@@ -148,7 +148,7 @@ shift + alt - j : yabai -m window --focus prev
 shift + alt - k : yabai -m window --focus next
 
 # toggle window split type
-# alt - e : yabai -m window --toggle split
+alt - e : yabai -m window --toggle split
 
 # float / unfloat window and center on screen
 # alt - t : yabai -m window --toggle float --grid 4:4:1:1:2:2
