--- a/.yabairc
+++ b/.yabairc
@@ -41,15 +41,15 @@ yabai -m config                                 \
     window_border_radius         12             \
     window_border_blur           off            \
     window_border_hidpi          on             \
-    window_border                on            \
+    window_border                off            \
     split_ratio                  0.50           \
     split_type                   auto           \
     auto_balance                 off            \
-    top_padding                  5             \
-    bottom_padding               5             \
-    left_padding                 5             \
-    right_padding                5             \
-    window_gap                   06             \
+    top_padding                  0             \
+    bottom_padding               0             \
+    left_padding                 0             \
+    right_padding                0             \
+    window_gap                   00             \
     layout                       bsp            \
     mouse_modifier               fn             \
     mouse_action1                move           \
